test: refactor the test because the removing balance insertion when creating accounts